core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/aggregate2.yf
---
name: aggregate-self
graphs:
  start:
    - {type: Echo, put: listi, value: []}
    - type: AggregateList
      aggregate: {ok: world}

      aggregateList: "{listi}"
      result: "list"

    - type: AggregateList
      aggregate: {hello: world}
      aggregateList: "{list}"
      result: "list2"


